<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gema.photocontroller.DetoursActivity">

    <TextView
        android:id="@+id/change_place_for_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/caption_place_for_ads"
        android:padding="@dimen/caption_place_for_ads_padding"
        android:text="@string/set_place_for_ads"
        android:textSize="@dimen/caption_place_for_ads" />

    <TextView
        android:id="@+id/change_problems_for_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_place_for_ads"
        android:layout_marginBottom="25dp"
        android:background="@drawable/caption_place_for_ads"
        android:padding="@dimen/caption_place_for_ads_padding"
        android:text="@string/set_problem"
        android:textSize="@dimen/caption_place_for_ads" />

    <LinearLayout
        android:id="@+id/group_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_problems_for_ads"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/make_single_photo_btn"

            style="@style/BtnFont"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_marginRight="@dimen/main_menu_btn_margin_right"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapeupper"
            android:text="@string/make_photo_caption" />

        <Button
            android:id="@+id/get_single_photo_btn"

            style="@style/BtnFont"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_weight="0.5"
            android:background="@drawable/buttonshapeupper"
            android:text="@string/get_photo_caption" />
    </LinearLayout>

    <ImageView
        android:id="@+id/photo_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_btn"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/caption_place_for_ads"
        android:adjustViewBounds="true" />


    <Button
        android:id="@+id/photo_send_btn"
        style="@style/BtnFont"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_btn_height"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/main_menu_btn_margin_bottom"
        android:background="@drawable/buttonshapelower"
        android:text="@string/send_btn" />

    <EditText
        android:id="@+id/detours_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/photo_send_btn"
        android:hint="@string/comments_edit_text" />
</RelativeLayout>