<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.gema.photocontroller.SinglePhotoActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_place_for_ads"
        android:textSize="@dimen/caption_place_for_ads"
        android:id="@+id/change_place_for_ads"
        android:layout_marginBottom="25dp"
        android:padding="@dimen/caption_place_for_ads_padding"
        android:background="@drawable/caption_place_for_ads"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:id="@+id/group_btn"
        android:layout_below="@id/change_place_for_ads">

        <Button
            android:id="@+id/make_single_photo_btn"

            style="@style/BtnFont"
            android:background="@drawable/buttonshapeall"
            android:text="@string/make_photo_caption"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="@dimen/main_menu_btn_height"
            android:layout_marginRight="@dimen/main_menu_btn_margin_right"/>
        <Button
            android:id="@+id/get_single_photo_btn"

            style="@style/BtnFont"
            android:background="@drawable/buttonshapeall"
            android:text="@string/get_photo_caption"
            android:layout_width="match_parent"
            android:layout_weight="0.5"
            android:layout_height="@dimen/main_menu_btn_height" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/photo_image"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:layout_below="@+id/group_btn"
        android:layout_marginTop="@dimen/caption_place_for_ads"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comments_edit_text"
        android:layout_above="@id/group_photo_send_btn"
        android:id="@+id/single_photo_comment"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_btn_height"
        style="@style/BtnFont"
        android:id="@+id/group_photo_send_btn"
        android:background="@drawable/buttonshapelower"
        android:text="@string/send_btn"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/main_menu_btn_margin_bottom"/>
</RelativeLayout>
