<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gema.photocontroller.LoginActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_edittext"
        android:hint="@string/login_edittext"
        android:maxLines="1"
        android:background="@drawable/rounded_edittext"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_edittext"
        android:hint="@string/password_edittext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:background="@drawable/rounded_edittext"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginBottom="20dp"
        android:digits="1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"/>
    <Button
        android:id="@+id/sign_in_btn"

        android:text="@string/sign_in_caption"
        android:textColor="#FFFFFF"
        android:textSize="30sp"

        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_btn_height"
        android:background="@drawable/buttonshapeall"
        />

</LinearLayout>
