<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_placement"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gema.photocontroller.ShowPlacement">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/id_group_text_placement"
        android:layout_marginBottom="@dimen/text_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_placement_text"
            style="@style/GemaStyleFont.GemaStyleBoldFont"/>
        <TextView
            android:id="@+id/id_single_placement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GemaStyleFont"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/dates_group_text_placement"
        android:layout_below="@+id/id_group_text_placement"
        android:layout_marginBottom="@dimen/text_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dates_placement_text"
            style="@style/GemaStyleFont.GemaStyleBoldFont"/>
        <TextView
            android:id="@+id/dates_single_placement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GemaStyleFont" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/placeforads_group_text_placement"
        android:layout_below="@+id/dates_group_text_placement"
        android:layout_marginBottom="@dimen/text_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_for_ads_placement_text"
            style="@style/GemaStyleFont.GemaStyleBoldFont"/>
        <TextView
            android:id="@+id/placeforads_single_placement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GemaStyleFont" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/brand_name_group_text_placement"
        android:layout_below="@+id/placeforads_group_text_placement"
        android:layout_marginBottom="@dimen/text_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand_name_placement_text"
            style="@style/GemaStyleFont.GemaStyleBoldFont"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brand_name_single_placement"
            style="@style/GemaStyleFont"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/brand_name_group_text_placement"
        android:layout_marginBottom="@dimen/text_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_placement_text"
            style="@style/GemaStyleFont.GemaStyleBoldFont"
            android:layout_marginBottom="@dimen/text_margin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_single_placement"
            style="@style/GemaStyleFont"/>
    </LinearLayout>

</RelativeLayout>
